tests/compile/compile_fail/point_instead_of_direction.stderr
error[E0308]: mismatched types
 --> tests/compile/compile_fail/point_instead_of_direction.rs:7:14
  |
7 |     move_dir(p); // should fail
  |     -------- ^ expected `Direction3<_>`, found `Point3<f32>`
  |     |
  |     arguments to this function are incorrect
  |
  = note: expected struct `echo_math::Direction3<_>`
             found struct `echo_math::Point3<f32>`
note: function defined here
 --> tests/compile/compile_fail/point_instead_of_direction.rs:3:4
  |
3 | fn move_dir<T: Scalar>(dir: Direction3<T>) {}
  |    ^^^^^^^^            ------------------

warning: unused variable: `dir`
 --> tests/compile/compile_fail/point_instead_of_direction.rs:3:24
  |
3 | fn move_dir<T: Scalar>(dir: Direction3<T>) {}
  |                        ^^^ help: if this is intentional, prefix it with an underscore: `_dir`
  |
  = note: `#[warn(unused_variables)]` on by default
